# falconre

./: .gitignore  Cargo.toml  Dockerfile  README.md  setup.py
.github/workflows/: test.yml
examples/: bin_ls.py  falcon-dot-graph.py  is_function_pure  log.py  print-calls.py  print-falcon-functions.py  print-function-blocks.py  print_calls.py  stack-writes.py  symex-one.py  tests.py
falconre/: __init__.py
src/: lib.rs
src/falcon/: architecture.rs  mod.rs
src/falcon/analysis/: constants.rs  constants_.rs  location_set.rs  mod.rs
src/falcon/il/: block.rs  constant.rs  control_flow_graph.rs  edge.rs  expression.rs  function.rs  instruction.rs  location.rs  mod.rs  operation.rs  program.rs  scalar.rs
src/falcon/loader/: mod.rs
src/falcon/memory/: backing.rs  mod.rs  paged.rs
src/finch/: mod.rs
src/finch/executor/: driver.rs  memory.rs  mod.rs  state.rs
src/raptor/: analysis.rs  mod.rs
src/raptor/analysis/: location_set.rs  mod.rs  stack_buffers.rs  strided_intervals.rs
src/raptor/ir/: block.rs  call.rs  constant.rs  control_flow_graph.rs  dereference.rs  edge.rs  expression.rs  function.rs  instruction.rs  location.rs  lvalue.rs  mod.rs  operation.rs  program.rs  reference.rs  rvalue.rs  scalar.rs  stack_variable.rs  variable.rs
