[package]
name = "falconre"
version = "0.1.0"
authors = ["endeavor <endeavor@rainbowsandpwnies.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon = "0.4.12"
falcon-raptor = {git="https://github.com/falconre/raptor"}
# falcon-raptor = #"0.4.10"
falcon-finch = "0.4.7"
rayon = "1.3"
serde_json = "1.0"

[dependencies.pyo3]
version = "0.9.2"
features = ["extension-module"]

[lib]
name = "falconre"
crate-type = ["cdylib"]

[features]
capstone4 = ["falcon/capstone4", "falcon-raptor/capstone4", "falcon-finch/capstone4"]