[package]
name = "falconre"
version = "0.5.2"
authors = ["endeavor <endeavor@rainbowsandpwnies.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon = "0.5.2"
falcon-raptor = "0.5.2"
falcon-finch = { version="0.5.2", features=["thread_safe"] }
rayon = "1.3"
serde_json = "1.0"

[dependencies.pyo3]
version = "0.14"
features = ["extension-module"]

[lib]
name = "falconre"
crate-type = ["cdylib"]

[features]
default = ["capstone4"]
capstone4 = ["falcon/capstone4", "falcon-raptor/capstone4", "falcon-finch/capstone4"]